# infoscreen-ng

./: .gitignore  Cargo.toml  README.md  TODO.md  config.toml  exams.xhtml  flake.nix  pkg.nix  sway.conf
bus-schedule/: Cargo.toml  build.rs  config.toml  get-schedule.sh
bus-schedule/src/: main.rs
bus-schedule/ui/: app.slint  schedule.slint  shared.slint
src/: lib_nah.rs  main.rs  othr_ptp.rs  untis.rs
todo-list/: Cargo.toml  cal.ics  event.ics  tasks.ics
todo-list/src/: main-old.rs  main.rs  main2.rs
todo-list/ui/: app.slint  event.slint  shared.slint
ui/: app.slint  bus-schedule.slint  event.slint  lecture-timetable.slint  lecture.slint  news.slint  shared.slint  table.slint  time.slint
