[package]
name = "infoscreen-timetable"
version = "0.2.0"
license = "GPL-2.0-only"
authors = ["Andrej Utz <utz@aix0.eu>"]
edition = "2021"
build = "build.rs"

[workspace]
members = ["bus-schedule"]

[features]
default = ["qt"]
qt = ["slint/backend-qt"]
wayland = ["slint/backend-winit-wayland"]
x11 = ["slint/backend-winit-x11"]

[build-dependencies]
slint-build = "^0.3"

[dependencies]
# Error handling
anyhow = "^1"

# Interface
slint = { version = "^0.3", default-features = false, features = ["std", "compat-0-3-0"] }
clap = { version = "^4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }

# Config
figment = { version = "0.10", features = ["toml"] }
xdg = "^2.4"
sys-locale = "^0.2.1"

# Data
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
serde = { version = "^1", features = ["derive"] }
regex = { version = "^1.6", default-features = false, features = ["std"] }
bytes = "^1.2"
feed-rs = "^1"
json-rpc-types = "^1.2"
scraper = "^0.13"

# I/O
futures-util = "^0.3"
tokio = { version = "^1.21", features = ["io-util","macros","signal","time"] }
tokio-util = "^0.7"
reqwest = { version = "^0.11", features = ["cookies","json","trust-dns"] }

# Logging
tracing = { version = "^0.1", features = ["log", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"

