[package]
name = "infoscreen-bus-schedule"
version = "0.2.0"
license = "GPL-2.0-only"
authors = ["Andrej Utz <utz@aix0.eu>"]
edition = "2021"
build = "build.rs"

[features]
default = ["qt"]
qt = ["slint/backend-qt"]
wayland = ["slint/backend-winit-wayland", "slint/renderer-winit-skia"]
x11 = ["slint/backend-winit-x11", "slint/renderer-winit-skia"]

[build-dependencies]
slint-build = "^0.3"

[dependencies]
# Error handling
anyhow = "^1"

# Interface
slint = { version = "^0.3", default-features = false, features = ["std", "compat-0-3-0"] }
clap = { version = "^4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }

# Config
figment = { version = "0.10", features = ["toml"] }
xdg = "^2.4"
sys-locale = "^0.2.1"

# Data
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
serde = { version = "^1", features = ["derive"] }

# I/O
futures-util = "^0.3"
tokio = { version = "^1.21", features = ["io-util","macros","signal","time"] }
tokio-util = "^0.7"
tokio-stream = { version = "^0.1.10" }
reqwest = { version = "^0.11", features = ["json","trust-dns"] }

# Logging
tracing = { version = "^0.1", features = ["log", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
