[package]
name = "infoscreen-todo-list"
version = "0.2.0"
license = "GPL-2.0-only"
authors = ["Andrej Utz <utz@aix0.eu>"]
edition = "2021"
build = "build.rs"

[features]
default = ["qt"]
qt = ["slint/backend-qt"]
wayland = ["slint/backend-winit-wayland", "slint/renderer-winit-femtovg"]
x11 = ["slint/backend-winit-x11", "slint/renderer-winit-femtovg"]

[build-dependencies]
slint-build.workspace = true

[dependencies]
# Error handling
anyhow.workspace = true

# Interface
slint.workspace = true
clap.workspace = true

# Config
figment.workspace = true
xdg.workspace = true
sys-locale.workspace = true

# Data
chrono.workspace = true
serde.workspace = true
icalendar = { version = "0.15.7", features = ["chrono-tz"] }
hex_color = "3.0.0"

# I/O
futures-util = "^0.3"
tokio = { workspace = true, features = ["io-util","macros","signal","time"] }
tokio-util = "^0.7"
tokio-stream = { version = "^0.1.12" }
reqwest.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
